# Psi

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
NAS/: CMakeLists.txt  NAS.cpp  NAS.h  assorter.cpp  assorter.h  conf.h  fs_nas.cpp  fs_nas.h  labelled_fstab_nas.cpp  labelled_fstab_nas.h  task_executor.cpp  task_executor.h
exif/: CMakeLists.txt  exif.cpp  exif.h
